--- a/palindromeChecker/index.html
+++ b/palindromeChecker/index.html
@@ -16,6 +16,9 @@
     <button id="check-btn" onclick="handleClick();">Check</button>
     <div id="result"></div>
   </div>
+  <div>
+  <a href="https://jbreitenbr.github.io/fCC-JavaScript">Back</a>
+  </div>
   <script src="script.js"></script>
 
 </body>
